# SnapConvert

./: README.md  create_desktop_shortcut.ps1  pyproject.toml  start_snapconvert.bat  start_snapconvert_silent.vbs
src/snapconvert/: image_background_color.py  image_background_removal.py  main.py
src/snapconvert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/snapconvert/converter/: image_converter.py  video_converter.py
src/snapconvert/image_process/: image_crop.py  image_exif.py  image_face_blur.py  image_filters.py  image_object_detect.py  image_pixelate.py  image_rotate_flip.py  image_to_pdf.py  image_upscale.py  image_watermark.py
src/snapconvert/remove_bg/image/: image_background_replace.py
src/snapconvert/remove_bg/video/: _utils.py  video_background_color.py  video_background_removal.py  video_background_replace.py
src/snapconvert/static/: index.html  snapconvert.css  snapconvert.js
src/snapconvert/video_process/: video_compress.py  video_object_detect.py  video_to_frames.py  video_watermark.py
